manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: playground
  namespace: dev

spec:
  ingressClassName: traefik

  rules:
    - host: app.iot.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: playground
                port:
                  number: 8888%
